python-web-server/tests/http/requests/invalid/chunked_04.py
from web_server.http.errors import InvalidHeader

request = InvalidHeader
